--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
     <build>
 
-        <defaultGoal>package</defaultGoal>
+        <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
