--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
     </properties>
 
-    <profiles>
+<!--    <profiles>
         <profile>
             <id>rest</id>
             <activation>
@@ -66,7 +66,7 @@
             </activation>
 
         </profile>
-    </profiles>
+    </profiles>-->
 
     <build>
 
