--- a/server-Web/pom.xml
+++ b/server-Web/pom.xml
@@ -11,9 +11,70 @@
 
     <artifactId>server-Web</artifactId>
     <packaging>war</packaging>
-    <properties>
-        <ws>soap</ws>
-    </properties>
+
+
+    <profiles>
+        <profile>
+            <id>rest</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.to.activate>rest</spring.profiles.to.activate>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>service-RestClient</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>soap</id>
+            <properties>
+                <spring.profiles.to.activate>soap</spring.profiles.to.activate>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.cxf</groupId>
+                    <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                    <version>RELEASE</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.cxf</groupId>
+                    <artifactId>cxf-rt-transports-http</artifactId>
+                    <version>RELEASE</version>
+                </dependency>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>service-API</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <configuration>
+                <webResources>
+                    <resource>
+                        <filtering>true</filtering>
+                        <directory>src/main/webapp</directory>
+                        <includes>
+                            <include>**/web.xml</include>
+                        </includes>
+                    </resource>
+                </webResources>
+                <warSourceDirectory>src/main/webapp</warSourceDirectory>
+                <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 
     <dependencies>
 
@@ -88,7 +149,7 @@
         </dependency>
     </dependencies>
 
-    <profiles>
+<!--    <profiles>
         <profile>
             <id>soap</id>
             <dependencies>
@@ -118,5 +179,5 @@
                 </dependency>
             </dependencies>
         </profile>
-    </profiles>
+    </profiles>-->
 </project>
