--- a/server-Soap/src/main/webapp/WEB-INF/web.xml
+++ b/server-Soap/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,9 @@
         <param-name>spring.profiles.active</param-name>
         <param-value>${type.ws}</param-value>
     </context-param>-->
-<welcome-file-list>
+<!--<welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
-</welcome-file-list>
+</welcome-file-list>-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
