--- a/server-Rest/src/main/resources/configuration/swagger.properties
+++ b/server-Rest/src/main/resources/configuration/swagger.properties
@@ -1,2 +1,2 @@
 documentation.services.version=1.0
-documentation.services.basePath=http://localhost:8082/department/docs
+documentation.services.basePath=http://localhost:8082/department/rest
