--- a/server-Rest/pom.xml
+++ b/server-Rest/pom.xml
@@ -14,14 +14,139 @@
 
     <properties>
         <some.property>ssoup</some.property>
+
+
     </properties>
 
 
     <build>
         <plugins>
+<!--            <plugin>
+                <groupId>com.github.kongchen</groupId>
+                <artifactId>swagger-maven-plugin</artifactId>
+                <version>3.1.3</version>
+                <configuration>
+                    <apiSources>
+                        <apiSource>
+                            <springmvc>true</springmvc>
+                            <locations>http://localhost:8082/department/v2/api-docs</locations>
+                            <basePath>/api-doc</basePath>
+                            <info>
+                                <title>Put your REST service's name here</title>
+                                <description>Add some description</description>
+                                <version>v1</version>
+                            </info>
+                            <swaggerDirectory>${project.build.directory}/api</swaggerDirectory>
+                            <attachSwaggerArtifact>true</attachSwaggerArtifact>
+                        </apiSource>
+                    </apiSources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        &lt;!&ndash; fx process-classes phase &ndash;&gt;
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
-                <!-- https://mvnrepository.com/artifact/com.github.kongchen/swagger-maven-plugin -->
+                <groupId>io.github.robwin</groupId>
+                <artifactId>swagger2markup-maven-plugin</artifactId>
+                <version>0.9.3</version>
+                <configuration>
+                    <inputDirectory>${project.build.directory}/api</inputDirectory>
+                    <outputDirectory>${generated.asciidoc.directory}</outputDirectory>
+                    &lt;!&ndash; specify location to place asciidoc files &ndash;&gt;
+                    <markupLanguage>asciidoc</markupLanguage>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>procfess-classes</phase>
+                        <goals>
+                            <goal>process-swagger</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.11</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby-complete</artifactId>
+                        <version>1.7.21</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>asciidoc</sourceDirectory>
+                    &lt;!&ndash; You will need to create an .adoc file. This is the input to this plugin &ndash;&gt;
+                    <sourceDocumentName>index.adoc</sourceDocumentName>
+                    <attributes>
+                        <doctype>book</doctype>
+                        <toc>left</toc>
+                        <toclevels>2</toclevels>
+                        <generated>asciidoc</generated>
+                        &lt;!&ndash; this path is referenced in swagger.adoc file. The given file will simply
+                            point to the previously create adoc files/assemble them. &ndash;&gt;
+                    </attributes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>asciidoc-to-html</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>/docs/html</outputDirectory>
+                            &lt;!&ndash; specify location to place html file &ndash;&gt;
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>asciidoc-to-pdf</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>/docs/pdf</outputDirectory>
+                            &lt;!&ndash; specify location to place pdf file &ndash;&gt;
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
+
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <warSourceDirectory>WebContent</warSourceDirectory>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <webResources>
+                        <resource>
+                            <directory>/docs/html</directory>
+                            &lt;!&ndash; Add swagger.pdf to WAR file, so as to make it available as static content. &ndash;&gt;
+                        </resource>
+                        <resource>
+                            <directory>/docs/pdf</directory>
+                            &lt;!&ndash; Add swagger.html to WAR file, so as to make it available as static content. &ndash;&gt;
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>-->
+
+            <plugin>
                     <groupId>com.github.kongchen</groupId>
                     <artifactId>swagger-maven-plugin</artifactId>
                     <version>3.1.4</version>
@@ -29,11 +154,11 @@
                 <configuration>
                     <apiSources>
                         <apiSource>
-                            <springmvc>false</springmvc>
-                            <locations>com.testcompany.testproject.rest.resource</locations>
+                            <springmvc>true</springmvc>
+                            <locations>com.mrigor.tasks.department.rest</locations>
                             <schemes>http,https</schemes>
-                            <host>www.[host]:[port]</host>
-                            <basePath>/v2</basePath>
+                            <host>http://localhost:8082/</host>
+                            <basePath>/department/rest</basePath>
                             <info>
                                 <title>Swagger spec for our REST API</title>
                                 <version>v2</version>
@@ -51,7 +176,8 @@
                                     <name>Company Licence</name>
                                 </license>
                             </info>
-                            <swaggerDirectory>src/main/webapp/</swaggerDirectory>     <!--****************************************** swagger.yml -->
+                            <outputPath>ddd</outputPath>
+                            <swaggerDirectory>src/main/webapp/</swaggerDirectory>     <!--****************************************** swagger.json -->
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -88,8 +214,6 @@
 
 
 
-
-
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
@@ -103,7 +227,7 @@
                         </goals>
                         <configuration>
                             <backend>html5</backend>
-                            <outputDirectory>${project.build.directory}/docs/html</outputDirectory>      <!--**********************************-->
+                            <outputDirectory>src/main/webapp/docs/html</outputDirectory>      <!--**********************************-->
                         </configuration>
                     </execution>
                     <execution>
@@ -114,7 +238,7 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
-                            <outputDirectory>${project.build.directory}/docs/pdf</outputDirectory>      <!--**********************************-->
+                            <outputDirectory>src/main/webapp/docs/pdf</outputDirectory>      <!--**********************************-->
                         </configuration>
                     </execution>
                 </executions>
@@ -126,13 +250,13 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <sourceDirectory>src/docs/asciidoc</sourceDirectory>                      <!--**********************************-->
+                    <sourceDirectory>asciidoc</sourceDirectory>                      <!--**********************************-->
                     <sourceDocumentName>index.adoc</sourceDocumentName>
                     <attributes>
                         <doctype>book</doctype>
                         <toc>left</toc>
                         <toclevels>2</toclevels>
-                        <generated>${project.build.directory}/docs/asciidoc/generated</generated>         <!--**********************************-->
+                        <generated>src/main/webapp/asciidoc</generated>         <!--**********************************-->
                     </attributes>
                 </configuration>
             </plugin>
